src/test/deca/codegen/invalid/renduInter02/00divide_by_zero.deca
// Description:
//      Opération binaire "/" incorrecte : valeurs inappropriées utilisées pour le calcul
//      => L'opérateur de division ne peut pas diviser un nombre par 0
//
// Resultats:
//      Erreur à l'exécution
//      Ligne 10 : division par zero

{
    int x = y / 0;
    println("x=", x);
}